# memory-manager

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Txt  compile.sh
examples/: basic_usage.c  benchmark_concurrent.c  benchmark_simple.c  benchmark_strategies.c  list.c  memo_server.c  test_detailed_analysis.c  test_size_audit.c
include/: memory_client.h  memory_config.h  memory_metrics.h  memory_pool.h
src/: memory_client.c  memory_internal.h  memory_metrics.c  memory_pool.c
